# meta

./: .gitignore  README.md  pyproject.toml  wrangler.jsonc
.github/workflows/: deploy.yml
data/: wikidata.jsonl
db/: schema.sql
scripts/: build_gazetteer.py  build_wikidata_variants.py  export_web_data.py  fetch_sources.py  fetch_wikidata.py  load_db.py  normalize_sources.py  report.py  resolve_entities.py  resolve_with_llm.py
web/: _headers  abbreviations.json  app.js  data-blobs.json  data.json  dev_server.py  index.html  robots.txt  sitemap.xml  style.css
